--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "node-cron": "^3.0.3",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
